fix(toolbar): sidebar collapse button aligning

--- a/src/widgets/toolbar/ui/ToolbarWindows/ToolbarWindows.module.scss
+++ b/src/widgets/toolbar/ui/ToolbarWindows/ToolbarWindows.module.scss
@@ -1,7 +1,7 @@
 .toolbar-windows {
   display: flex;
   justify-content: space-between;
-  padding-left: 216px;
+  padding-left: 10px;
 }
 
 .controls {
